welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:4: error: value ! is not a member of Boolean
  } else if (isMorning!){
                      ^answerCell:6: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (isAsleep){
         ^